Bug 441813 - Dolphin doesn't fully quit after Compress from context menu
Summary: Dolphin doesn't fully quit after Compress from context menu
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Andrey
URL:
Keywords: efficiency-and-performance
Depends on:
Blocks:
 
Reported: 2021-08-31 12:26 UTC by Andrey
Modified: 2021-09-20 20:20 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey 2021-08-31 12:26:22 UTC
SUMMARY
Stale Dolphin process overlives all it's windows closes after Compress from context menu.

STEPS TO REPRODUCE
1. Compress something using Dolphin "Compress" context menu.
2. Close all Dolphin windows

OBSERVED RESULT
There is stale Dolphin process without any UI.

EXPECTED RESULT
There should be no Dolphin processes left after closing it's all windows. 

SOFTWARE/OS VERSIONS
Built from master
Comment 1 Bug Janitor Service 2021-08-31 12:34:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/63
Comment 2 Andrey 2021-09-20 15:24:46 UTC
Git commit 3c563880b00e46794f55f6214506f0ce9aac3965 by Andrey Butirsky.
Committed on 20/09/2021 at 15:24.
Pushed by butirsky into branch 'master'.

fix: Dolphin doesn't fully quit after Compress from context menu

deleteLater() doesn't work if no event loop is run for the thread

M  +2    -0    kerfuffle/jobs.cpp

https://invent.kde.org/utilities/ark/commit/3c563880b00e46794f55f6214506f0ce9aac3965
Comment 3 Nate Graham 2021-09-20 15:53:13 UTC
Perhaps worth cherry-picking to stable?
Comment 4 Andrey 2021-09-20 18:52:42 UTC
Git commit 235e6f6f0e838fb59f4ff8925c7f848eaaa7c0ea by Andrey Butirsky.
Committed on 20/09/2021 at 18:52.
Pushed by butirsky into branch 'cherry-pick-3c563880'.

fix: Dolphin doesn't fully quit after Compress from context menu

deleteLater() doesn't work if no event loop is run for the thread


(cherry picked from commit 3c563880b00e46794f55f6214506f0ce9aac3965)

M  +2    -0    kerfuffle/jobs.cpp

https://invent.kde.org/utilities/ark/commit/235e6f6f0e838fb59f4ff8925c7f848eaaa7c0ea
Comment 5 Andrey 2021-09-20 18:56:19 UTC
(In reply to Nate Graham from comment #3)
> Perhaps worth cherry-picking to stable?

Could you check if I chose the branch right, Nate?
https://invent.kde.org/utilities/ark/-/merge_requests/65
Comment 6 Nate Graham 2021-09-20 19:30:02 UTC
Yep! Merged. For future reference, many apps--including Ark--use the merge-to-stable rather than the cherry-pick-to-stable workflow.
Comment 7 Albert Astals Cid 2021-09-20 19:54:22 UTC
> merge-to-stable

That doesn't seem right, you mean merge-from-stable/merge-to-master?
Comment 8 Nate Graham 2021-09-20 20:20:25 UTC
Right, I'm just being complete:
1. Merge *the merge request* into stable
2. Merge stable into master