fix: Dolphin doesn't fully quit after Compress from context menu

deleteLater() doesn't work if no event loop is run for the thread

BUG: 441813