kerfuffle/jobs.cpp
@@ -487,6 +487,8 @@ void CreateJob::doWork()
 
     if (m_addJob) {
         connect(m_addJob, &KJob::result, this, &CreateJob::emitResult);
+        // as autoDelete doesn't work for jobs outside of a QEventLoop
+        connect(m_addJob, &KJob::finished, this, [this] {delete m_addJob;});
         // Forward description signal from AddJob, we need to change the first argument ('this' needs to be a CreateJob).
         connect(m_addJob, &KJob::description, this, [=](KJob *, const QString &title, const QPair<QString,QString> &field1, const QPair<QString,QString> &) {
             Q_EMIT description(this, title, field1);
